# oshit

./: .gitignore  Dockerfile  Main.hs  Makefile  README.md  oshit.cabal
.github/workflows/: ci.yaml
Commands/Plumbing/: Init.hs
Commands/Plumbing/Commit/: CommitFromTree.hs
Commands/Plumbing/Index/: AddBlob.hs  ListIndex.hs  TreeFromIndex.hs
Commands/Plumbing/Object/: CreateBlob.hs  ListTree.hs  ShowObj.hs
Commands/Plumbing/Reference/: UpdateBranch.hs  UpdateHead.hs
Commands/Plumbing/Stage/: StageBlob.hs  TreeFromStage.hs
Commands/Porcelain/: Init.hs  Log.hs  Reflog.hs
Commands/Porcelain/Commit/: Commit.hs
Commands/Porcelain/Index/: Add.hs  Status.hs
Commands/Porcelain/Merge/: CherryPick.hs
Commands/Porcelain/Reference/: Checkout.hs
Commands/Porcelain/Stage/: StageStatus.hs
Core/: Core.hs  Index.hs  Log.hs  Merge.hs  Object.hs  Packfile.hs  Reference.hs  Reflog.hs  Stage.hs
Core/Object/: Blob.hs  Commit.hs  Object.hs  Tree.hs
Util/: Colors.hs  Util.hs
app/: Main.hs
src/: Main.hs
src/Commands/Plumbing/Commit/: CommitFromTree.hs
src/Commands/Plumbing/Index/: AddBlob.hs
src/Commands/Plumbing/Merge/: MergeCommit.hs  MergeTree.hs
src/Commands/Plumbing/Object/: CreateBlob.hs  ListTree.hs  ShowObj.hs
src/Commands/Plumbing/Packfile/: VerifyPack.hs
src/Commands/Plumbing/Reference/: UpdateBranch.hs  UpdateHead.hs
src/Commands/Porcelain/: Init.hs  Log.hs  Reflog.hs
src/Commands/Porcelain/Commit/: Commit.hs
src/Commands/Porcelain/Merge/: CherryPick.hs
src/Commands/Porcelain/Reference/: Branch.hs
src/Core/: Core.hs  Index.hs  Merge.hs  Object.hs  Packfile.hs  Reflog.hs
src/Core/Object/: Blob.hs  Commit.hs  Core.hs  Tree.hs
src/Util/: Compression.hs  Util.hs
test/Core/: CoreSpec.hs  ObjectSpec.hs  ReflogSpec.hs
test/Test/: Oshit.hs
test/Util/: UtilSpec.hs
