name:       oshit
version:    0.1.0
license:    TBD
author:     Lucas Oshiro
maintainer: lucasseikioshiro@gmail.com

build-type:    Simple
cabal-version: >=1.10

executable oshit
  main-is: Main.hs
  hs-source-dirs: .

  build-depends: base
               , zlib
               , binary
               , containers
               , cryptohash
               , directory
               , bytestring
               , base16-bytestring
               , unix-compat
               , split
               , time
               , process

  other-modules: Core.Core
               , Core.Index
               , Core.Log
               , Core.Merge
               , Core.Object
               , Core.Packfile
               , Core.Reference
               , Core.Reflog
               , Util.Colors
               , Util.Util
               , Commands.Plumbing.Commit.CommitFromTree
               , Commands.Plumbing.Index.AddBlob
               , Commands.Plumbing.Index.ListIndex
               , Commands.Plumbing.Index.TreeFromIndex
               , Commands.Plumbing.Merge.MergeTree
               , Commands.Plumbing.Merge.MergeCommit
               , Commands.Plumbing.Object.CreateBlob
               , Commands.Plumbing.Object.ListTree
               , Commands.Plumbing.Object.ShowObj
               , Commands.Plumbing.Reference.UpdateBranch
               , Commands.Plumbing.Reference.UpdateHead
               , Commands.Porcelain.Commit.Commit
               , Commands.Porcelain.Index.Add
               , Commands.Porcelain.Init
               , Commands.Porcelain.Log
               , Commands.Porcelain.Merge.CherryPick
               , Commands.Porcelain.Reference.Branch
               , Commands.Porcelain.Reflog

  default-language: Haskell2010
  ghc-options: -Wall -threaded -j
